# phidgetwebrtc

./: .gitignore  README.md  pyproject.toml  pyvenv.cfg
src/: GestureProcessor.py  GestureQueue.py  SpinData.py  TiltData.py  aiohttprtcdemo.py  basicserver.py  encoder.py  pyvenv.cfg  rtcbotserver.py  spatial.py  webrtcgeoconnecttable.py
src/Start_Here_Mac.app/Contents/: CodeResources  Info.plist
src/Start_Here_Mac.app/Contents/MacOS/: StartHere
src/Start_Here_Mac.app/Contents/Resources/: Assets.car  Info.plist
src/Start_Here_Mac.app/Contents/_CodeSignature/: CodeResources
src/static/: OptimizedDataDetector.js  SLP.css  SLP.js  SLPConfig.js  VirtualTable.js  geoconnecttable.html  index.html
src/todelete/: rtcbotserver.py
web/: geoconnectable.css  geoconnectable.js
